# WebTracingInvestments

./: README.md
WebTracingInvestment/: .env.example  .gitignore  README.md  app.db  pyproject.toml  requirements.txt  setup_test.py
WebTracingInvestment/app/: config.py  main.py
WebTracingInvestment/app/api/: routes.py  schemas.py
WebTracingInvestment/app/core/: logging.py  symbols.py
WebTracingInvestment/app/db/: models.py  repo.py  session.py
WebTracingInvestment/app/ingest/: base.py  reddit.py  threads.py
WebTracingInvestment/app/jobs/: scheduler.py
WebTracingInvestment/app/nlp/: entity.py  sentiment.py
WebTracingInvestment/app/services/: aggregation.py  pipeline.py
