[project]
name = "social-sentiment-mvp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlmodel>=0.0.16",
  "sqlalchemy>=2.0",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "tenacity>=8.2",
  "apscheduler>=3.10",
  "praw>=7.7",
  "vaderSentiment>=3.3.2",
]

[tool.uvicorn]
factory = false
